--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,101 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Poppins;
 }
 
 a {
-  color: inherit;
+  color: #1b73ba;
   text-decoration: none;
 }
 
 * {
+  /* margin: 0;
+  padding: 0; */
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+button {
+  all: unset;
+  cursor: pointer;
+}
+
+/* ul li {
+  text-indent: 0;
+  list-style-type: none;
+} */
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  /* margin-top: 0; */
+  font-size: 42px;
+}
+
+h2 {
+  /* margin-top: 0; */
+  font-size: 38px;
+}
+
+h3 {
+  font-size: 34px;
+}
+
+h4 {
+  font-size: 30px;
+}
+
+h5 {
+  font-size: 26px;
+}
+
+h6 {
+  font-size: 22px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 2;
+  color: #555;
+}
+
+pre {
+  padding: 40px 40px;
+  background-color: #f5f5f5;
+  overflow: auto;
+}
+code {
+  font-size: 18px;
+  font-family: Consolas;
+  overflow: auto;
+}
+
+@media (max-width: 1200px) {
+  main {
+    gap: 30px;
+  }
+}
+
+@media (max-width: 800px) {
+  main {
+    gap: 5vw;
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    background: white;
+    color: black;
   }
-}
+} */
