--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,27 +38,33 @@ main {
 
 h1 {
   /* margin-top: 0; */
+  margin: 40px 0px;
   font-size: 42px;
 }
 
 h2 {
   /* margin-top: 0; */
-  font-size: 38px;
+  margin: 40px 0px;
+  font-size: 22px;
 }
 
 h3 {
+  margin: 40px 0px;
   font-size: 34px;
 }
 
 h4 {
+  margin: 30px 0px;
   font-size: 30px;
 }
 
 h5 {
+  margin: 30px 0px;
   font-size: 26px;
 }
 
 h6 {
+  margin: 30px 0px;
   font-size: 22px;
 }
 
@@ -69,14 +75,20 @@ p {
 }
 
 pre {
-  padding: 40px 40px;
+  padding: 20px 30px;
   background-color: #f5f5f5;
   overflow: auto;
 }
 code {
-  font-size: 18px;
+  font-size: 16px;
   font-family: Consolas;
   overflow: auto;
+}
+
+ul li {
+  font-size: 18px;
+  line-height: 2;
+  color: #555;
 }
 
 @media (max-width: 1200px) {
