--- a/components/introduction-section/introduction-section.module.css
+++ b/components/introduction-section/introduction-section.module.css
@@ -40,7 +40,7 @@
   padding: 15px 25px;
   background-color: #64aef2;
   border-radius: 100vw;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .name_tag {
