--- a/pages/blog/blog.module.css
+++ b/pages/blog/blog.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 40px;
+  /* padding-top: 40px; */
 }
 
 .blog_page {
@@ -19,6 +19,7 @@
   justify-content: center;
   width: min(1000px, 100vw);
   padding: 40px;
+  padding-top: 75px;
 
   /* border: 0.1vw solid #d4d4d4; */
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
@@ -69,4 +70,28 @@
 
 .code {
   padding: 20px;
+}
+
+.back_button {
+  font-size: 2vw;
+  padding: 0vw 1vw;
+  border-radius: 100vw;
+  background-color: #f2f2f2;
+  border: 2px solid #999;
+
+  position: absolute;
+  top: 2vw;
+  left: 2vw;
+
+  rotate: 180deg;
+}
+
+@media (max-width: 1200px) {
+  .back_button {
+    font-size: 24px;
+    /* padding: 5px 10px; */
+    border: none;
+    left: 15px;
+    top: 15px;
+  }
 }
