Fixed responsiveness isuues

--- a/components/introduction-section/introduction-section.module.css
+++ b/components/introduction-section/introduction-section.module.css
@@ -39,7 +39,7 @@
   /* padding: .7vw 1.7vw; */
   padding: 15px 25px;
   background-color: #64aef2;
-  border-radius: 100vw;
+  border-radius: 1000px;
   color: rgb(255, 255, 255);
 }
 
