--- a/components/mobile-nav/mobile-nav.module.css
+++ b/components/mobile-nav/mobile-nav.module.css
@@ -14,7 +14,7 @@
 
 .header_navigation_bar_mobile {
   /* display: none; */
-  width: 100vw;
+  width: 100%;
   height: 5vw;
   background-color: #93caf9;
 }
