--- a/pages/blog/blog.module.css
+++ b/pages/blog/blog.module.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: min(1000px, 100vw);
+  width: min(1000px, 100%);
   padding: 40px;
   padding-top: 75px;
 
@@ -75,7 +75,7 @@
 .back_button {
   font-size: 2vw;
   padding: 0vw 1vw;
-  border-radius: 100vw;
+  border-radius: 100%;
   background-color: #f2f2f2;
   border: 2px solid #999;
 
