--- a/components/project/project.module.css
+++ b/components/project/project.module.css
@@ -1,8 +1,20 @@
+@keyframes popAnim {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .project {
   /* opacity: 0; */
   display: flex;
   gap: 0.5vw;
   cursor: pointer;
+  animation: popAnim 1s ease forwards;
 }
 
 .project_info {
